<resources>
    <string name="app_name">Personal Space</string>
    <string name="personal_space">Personal Space</string>
    <string name="sign_in_button">Sign In</string>
    <string name="login_hint">Phone number</string>
    <string name="password_hint">Password</string>
    <string name="forgot_password_button">Forgot password?</string>
    <string name="forgot_password">Forgot password</string>
    <string name="or_login_with">Or login with:</string>
    <string name="registration_button">Registration</string>
    <string name="username_hint">Username</string>
    <string name="sing_up_button">Sing Up!</string>
    <string name="confirm_password_hint">Confirm password</string>
    <string name="thank_you">Thank you</string>
    <string name="go_button">Go</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="send_button">Send</string>
    <string name="back_to_login_page">Back to login page</string>
    <string name="drawer_error">Drawer Error</string>


    <string-array name="titles">
        <item>My Rating</item>
        <item>Account</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_user_profile_activity">Personal Space</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_user">UserActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="alex">Alex</string>
</resources>
