<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/indigo"
    tools:context="upsite.com.personalspace.LoginActivity">

    <ImageView
        android:id="@+id/lock_image"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:src="@drawable/ic_lock_outline_white_48pt_3x"
        android:layout_gravity="center" />

    <TextView
        android:id="@+id/personal_space"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="45dp"
        android:text="@string/personal_space"
        android:layout_gravity="center"
        android:paddingTop="20dp"
        android:paddingBottom="30dp"/>

    <EditText
        android:id="@+id/login"
        android:layout_width="300dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:hint="@string/login_hint"
        android:backgroundTint="@color/white"/>
    <EditText
        android:id="@+id/password"
        android:layout_width="300dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:hint="@string/password_hint"
        android:backgroundTint="@color/white"/>

    <Button
        android:id="@+id/sign_in_button"
        style="@style/SignInButtonTheme"/>
    <Button
        android:paddingTop="10dp"
        android:id="@+id/registration_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/registration_button"
        android:onClick="onRegistrationButtonClick"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_gravity="center"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:text="@string/forgot_password_button"
        android:onClick="onForgotYourPasswordClick"/>

    <TextView
        android:id="@+id/or_login_with"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or_login_with"
        android:layout_gravity="center"
        android:textColor="@color/white"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:weightSum="3"
        android:layout_gravity="center">
        <ImageButton
            android:id="@+id/facebook_button"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_facebook"
            android:paddingRight="10dp"/>

        <ImageButton
            android:id="@+id/vk_button"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_vk"
            android:paddingRight="10dp"/>

        <ImageButton
            android:id="@+id/google_plus_button"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_google_plus" />
    </LinearLayout>







</LinearLayout>
