<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/indigo"
    tools:context="upsite.com.personalspace.ForgotPasswordActivity">

    <ImageView
        android:id="@+id/lock_image"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:src="@drawable/ic_lock_outline_white_48pt_3x"
        android:layout_gravity="center" />

    <TextView
        android:id="@+id/personal_space"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="40dp"
        android:text="@string/forgot_password"
        android:layout_gravity="center"
        android:paddingTop="20dp"
        android:paddingBottom="30dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_phone_number"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:textSize="18dp"/>

    <EditText
        android:id="@+id/login"
        android:layout_width="300dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:hint="@string/login_hint"
        android:backgroundTint="@color/white"/>

    <Button
        android:id="@+id/send_button"
        style="@style/SendButtonTheme"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="130dp"
        android:layout_gravity="center">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:text="@string/back_to_login_page"
            android:textColor="@color/darker_yellow"
            android:onClick="onBackToLoginPageClick"/>
    </LinearLayout>






</LinearLayout>
